Fixes to navbar and adds to dashboard page

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,15 @@
 .App-link {
   color: #61dafb;
 }
+
+.flex-container {
+  display: flex;
+}
+
+.flex-child {
+  flex: 1;
+}  
+
+.flex-child:first-child {
+  margin-right: 20px;
+} 
